--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>PABLO WEB</title>
+  <link href="main.css" rel="stylesheet" />
 </head>
 <body>
   <h1>PabloWEB | Página Oficial de PabloD.</h1>
