--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="main.css" rel="stylesheet" />
 </head>
 <body>
-  <font face="Comic Sans MS,arial,verdana">Página Oficial de Pablo</font>
+  <font face="arial,verdana">Página Oficial de Pablo</font>
   <h2>Página todavía en construcción</h2>
 </body>
 </html>
