--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>PABLO WEB</title>
   <link href="main.css" rel="stylesheet" />
+  <script data-ad-client="ca-pub-4118784734030721" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
   <font face="arial,verdana">Página Oficial de Pablo</font>
